Ignore UseBiasedLocking jvm option from 4.4 config file
The option existed in config files provided by us and is now deprecated.
To avoid ugly warnings on start up the migrate-configuration tool now removes it and
settingsMigrator strips it out from the additonals if it is present on start up.